--- a/styles/components/additional-feature-panel.css
+++ b/styles/components/additional-feature-panel.css
@@ -46,11 +46,11 @@
     gap: 16px;
 }
 
-.additional-feature-panel__option-title {
+.additional-feature-panel__option-title, .wrapper[class*="theme"] .additional-feature-panel__option-title {
     font-size: 20px;
     font-weight: 500;
     line-height: 120%;
-    color: #000;
+    color: #000!important;
 }
 
 .additional-feature-panel__option-switch {
@@ -70,7 +70,7 @@
 }
 
 .additional-feature-panel__option-switch-nav-item .nav-link {
-    color: #000;
+    color: #000!important;
     overflow: hidden;
     border-radius: 12px;
     height: 100%;
@@ -82,6 +82,10 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 130%;
+}
+
+.wrapper[class*="theme"] .additional-feature-panel__option-switch-nav-item .nav-link {
+    color: #000!important;
 }
 
 .additional-feature-panel__option-switch-nav-item .nav-link#small-size-texts {
@@ -109,25 +113,27 @@
 
 .additional-feature-panel__option-switch-nav-item .nav-link[id="white-color-theme"] span {
     background-color: #FFF;
+    color: #000!important;
 }
 
 .additional-feature-panel__option-switch-nav-item .nav-link[id="yellow-color-theme"] span {
     background-color: #FFFF00;
+    color: #000!important;
 }
 
 .additional-feature-panel__option-switch-nav-item .nav-link[id="blackWhite-color-theme"] span {
     background-color: #000;
-    color: #FFF;
+    color: #FFF!important;
 }
 
 .additional-feature-panel__option-switch-nav-item .nav-link[id="blackGreen-color-theme"] span {
     background-color: #000;
-    color: #A9DD38;
+    color: #A9DD38!important;
 }
 
 .additional-feature-panel__option-switch-nav-item .nav-link[id="blue-color-theme"] span {
     background-color: #9FD7FF;
-    color: #133C58;
+    color: #133C58!important;
 }
 
 .additional-feature-panel__option-switch-nav-item .nav-link.active {
@@ -136,13 +142,18 @@
     color: #000;
 }
 
-.additional-feature-panel__button-off {
+.additional-feature-panel__button-off, .wrapper[class*="theme"] .additional-feature-panel__button-off {
     width: 260px;
     padding: 16px 24px;
-    color: #000;
-    border: 1px solid #000;
+    color: #000!important;
+    border: 1px solid #000!important;
     font-size: 16px;
     white-space: nowrap;
+}
+.additional-feature-panel__button-off:hover, .wrapper[class*="theme"] .my-button:hover.my-button_noColor.additional-feature-panel__button-off {
+    color: #FFF!important;
+    border: 1px solid #000!important;
+    background-color: #000!important;
 }
 
 @media (max-width: 1361px) {
