--- a/styles/custom.css
+++ b/styles/custom.css
@@ -291,7 +291,7 @@
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 2000;
+    z-index: 900;
     display: flex;
     flex-direction: column-reverse;
     align-items: flex-end;
@@ -315,6 +315,34 @@
   display: none;
 }
 
-/* .wrapper * {
+.wrapper.theme-white * {
+    color: #000000!important;
+}
+.wrapper.theme-white {
+    background: #FFF;
+}
+
+.wrapper.theme-yellow {
+    background: #FFFF00;
+}
+
+.wrapper.theme-blue * {
     color: #133C58!important;
-} */
+}
+.wrapper.theme-blue {
+    background: #9FD7FF;
+}
+
+.wrapper.theme-blackWhite * {
+    color: #FFF!important;
+}
+.wrapper.theme-blackWhite {
+    background: #000;
+}
+
+.wrapper.theme-blackGreen * {
+    color: #A9DD38!important;
+}
+.wrapper.theme-blackGreen {
+    background: #000;
+}
